# src/routes/api/categories.js
@@ -3,6 +3,23 @@ const router = express.Router();
 const ctrlWrapper = require("../../helpers/ctrlWrapper");
 const { getAll } = require("../../controllers/categories");
 
+/**
+ * @swagger
+ * /categories:
+ *  get:
+ *   tags:
+ *     - Categories
+ *   summary: All transaction categories
+ *   responses:
+ *      '201':
+ *         content:
+ *          application/json:
+ *              schema:
+ *                  $ref: '#/components/schemas/CategoriesResponse'
+ *      '500':
+ *         description: Server error
+ */
+
 router.get("/", ctrlWrapper(getAll));
 
 module.exports = router;
